--- a/app/views/maktoub/newsletters/readme.erb
+++ b/app/views/maktoub/newsletters/readme.erb
@@ -1,3 +1,3 @@
 <h1>Readme</h1>
-<p>Place your newsletter partials in your views/maktoub/newsletters folder. The partial name is converted into the newsletter subject.</p>
+<p>Place your newsletter files in your views/maktoub/newsletters folder. The partial name is converted into the newsletter subject.</p>
 
